--- a/lang/en_us.yml
+++ b/lang/en_us.yml
@@ -2,7 +2,7 @@ mirror_mcsmcdr:
 
   multi_manager:
     init:
-      error: "An error occured when configuring {prefix}: {e}"
+      error: "An error occurred when configuring {prefix}: {e}"
       success: "{prefix} §bloaded successfully"
       fail: "{prefix} §cloaded unsuccessfully"
       prefix_notfound: "§cConfig file for {prefix} is missing, instance has been disabled"
@@ -15,7 +15,7 @@ mirror_mcsmcdr:
       fail.proxy: §cInterface §7({prefix})§c config §4{proxy} §cmisses valid value(s) §4'{keys}'
       fail.unavailable_system: "§cterminal disabled: system {system} unsupported§7 ({prefix})"
     permission_denied: §b{server_name}§c Permission denied
-    mcsm_disabled: §cMCSM-API is disbaled
+    mcsm_disabled: §cMCSM-API is disabled
     unavailable: §cConfig error, §4{prefix}§c instance disabled
   
   command:
@@ -43,7 +43,7 @@ mirror_mcsmcdr:
     confirm:
       prompt: §7{prefix} confirm §fto confirm operation
       cancel: Operation §b{server_name}-{action}§c cancelled
-      previous: Pervious operation §b{server_name}-{action}§c cancelled
+      previous: Previous operation §b{server_name}-{action}§c cancelled
       timeout: Operation §b{server_name}-{action}§c timed out
       none: §cNo tasks to confirm
       others: §cYou cannot confirm other people's task
@@ -57,7 +57,9 @@ mirror_mcsmcdr:
         stopped: stopped
         stopping: stopping
         starting: starting
-        running: runing
+        running: running
+        detached_java: "§cProcesses detached: Java not running, Screen running"
+        detached_screen: "§cProcesses detached: Java running, Screen not running"
 
     start:
       fail:
@@ -66,7 +68,9 @@ mirror_mcsmcdr:
         starting: starting, please wait for a moment
         running: running
         unavailable: Current config does not support start command. You need to configure MCSM or terminal
-        path_not_found: Cannot find available launch path, please check if {server_name} server is created and plugins's config is configured correctly
+        path_not_found: Cannot find available launch path, please check if {server_name} server is created and plugins' config is configured correctly
+        detached_java: "Screen process is running but Java is not, please use the kill command to terminate the Screen process"
+        detached_screen: "Java process is running but Screen is not, please terminate the Java process first"
       success:
         stopped: starting command sent
 
@@ -78,6 +82,8 @@ mirror_mcsmcdr:
         starting: starting, please stop after §b{server_name}§c started
         unavailable: " Current config does not support stop command. You need to configure MCSM or RCON"
         unavailable_windows: " Windows system does not support execute stop command from terminal. You need to configure MCSM or RCON"
+        detached_java: " Cannot stop, Screen is running without Java; please try the kill command"
+        detached_screen: " Cannot stop, Java is running without Screen; please close the Java process in the console first"
       success:
         running: stopping command sent
 
@@ -90,6 +96,7 @@ mirror_mcsmcdr:
         stopping: forced termination in progress...
         starting: forced termination in progress...
         running: forced termination in progress...
+        detached_java: forced termination in progress...
 
     sync:
       fail:
@@ -100,6 +107,8 @@ mirror_mcsmcdr:
         running: §cOperation failed / §b{server_name}§c running, please stop {server_name} first then sync
         rcon_status_mismatch: §cOperation failed / §b{server_name}§c status error. The RCON status does not match the port(terminal) status
         unavailable: §cOperation failed / §b{server_name}§c current config does not support detecting status. You need to configure MCSM, terminal or RCON
+        detached_java: "§cOperation failed / §b{server_name}§c Screen and Java processes detached (Java not running). Please terminate the Screen process first"
+        detached_screen: "§cOperation failed / §b{server_name}§c Screen and Java processes detached (Screen not running). Please terminate the Java process first"
       auto_restart:
         restarting: §b{server_name}§f running, auto-stopping {server_name} and syncing...
         fail: §cAuto-stopping failed, §b{server_name}§c§f{status}
@@ -107,7 +116,7 @@ mirror_mcsmcdr:
       skip_dictionary: "Cannot find the following directories below §b{server_name}§c, so MirrorMcsmcdr skipped it: §f`§7{paths}§f`"
       completed: §aSynchronization completed!! §fTime taken | §b{time}s §7/ §f§b{changed_files_count}§f files updated
       identical: §aNo changes detected
-      error: "§cAn error occured while syncing, please report this problem to operators: {e}"
+      error: "§cAn error occurred while syncing, please report this problem to operators: {e}"
   
   mcsm:
     disabled: §cMCSM-API is disabled
