--- a/lang/zh_cn.yml
+++ b/lang/zh_cn.yml
@@ -58,6 +58,8 @@ mirror_mcsmcdr:
         stopping: 正在停止
         starting: 正在启动
         running: 正在运行
+        detached_java: "§c已分离 (Java: 未启动; Screen: 已启动)"
+        detached_screen: "§c已分离 (Java: 已启动; Screen: 未启动)"
 
     start:
       fail:
@@ -67,6 +69,8 @@ mirror_mcsmcdr:
         running: 正在运行
         unavailable: 当前配置文件不支持start命令, 需要配置MCSM或terminal
         path_not_found: 未找到有效的启动目录, 请检查是否已创建正常的{server_name}服务端和插件配置文件是否配置正确
+        detached_java: Screen进程已启动但Java未启动, 请先使用kill指令终止Screen进程
+        detached_screen: Java进程已启动但Screen未启动, 请先终止Java进程
       success:
         stopped: 启动指令已发送
 
@@ -78,6 +82,8 @@ mirror_mcsmcdr:
         starting: 正在启动, 请等待§b{server_name}§c启动后重新停止
         unavailable: " 当前配置文件不支持stop命令, 需要配置MCSM或RCON"
         unavailable_windows: " Windows系统不支持通过终端执行stop命令, 需要配置MCSM或RCON"
+        detached_java: 不能停止, Screen已启动但未运行Java, 请尝试使用kill指令
+        detached_screen: 不能停止, Java运行中但无Screen终端, 请先在控制台关闭正在运行的java进程
       success:
         running: 关闭指令已发送
 
@@ -90,6 +96,7 @@ mirror_mcsmcdr:
         stopping: 强制终止...
         starting: 强制终止...
         running: 强制终止...
+        detached_java: 强制终止Screen...
 
     sync:
       fail:
@@ -100,6 +107,8 @@ mirror_mcsmcdr:
         running: §c操作失败 / §b{server_name}§c正在运行, 请先停止{server_name}再进行同步
         rcon_status_mismatch: §c操作失败 / §b{server_name}§c状态异常, RCON状态与端口状态不匹配
         unavailable: §c操作失败 / §b{server_name}当前配置文件不支持获取运行状态, 需要配置MCSM, terminal或RCON
+        detached_java: §c操作失败 / §b{server_name}§c Screen进程与Java进程已分离 (Java未启动)，请先终止Screen进程
+        detached_screen: §c操作失败 / §b{server_name}§c Screen进程与Java进程已分离 (Screen未启动)，请先终止Java进程
       auto_restart:
         restarting: §b{server_name}§f未停止, 自动关闭{server_name}并进行同步...
         fail: §c自动关闭失败, §b{server_name}§c§f{status}
